[gd_scene load_steps=10 format=2]

[ext_resource path="res://New folder/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://data/enemy/enemy1.JPG" type="Texture" id=2]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "move"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=8]
resource_name = "move2"
length = 0.8

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 36, 24 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24, 5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 36, 24 )

[node name="Enemy1" type="KinematicBody2D"]
position = Vector2( 0, 16 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/dead = SubResource( 12 )
anims/move = SubResource( 7 )
anims/move2 = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.9
autostart = true

[node name="ray1" type="RayCast2D" parent="."]
position = Vector2( 40, 8 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 2

[node name="ray2" type="RayCast2D" parent="."]
position = Vector2( 32, -24 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="enemy_damage" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_damage"]
position = Vector2( 0, -24 )
shape = SubResource( 10 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -8, 0 )
shape = SubResource( 11 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="area_entered" from="enemy_damage" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
